UPDATE: temporary setup for searches + fixes

--- a/drugs/templates/venn_diagrams.html
+++ b/drugs/templates/venn_diagrams.html
@@ -282,12 +282,12 @@ function copyToClipboard(txt) {
                 "white-space": "nowrap"  // Prevents the text from breaking into multiple lines
             });
             $(".number-empty").html("-");
-            $("#frame").css({
-              "left": "50%"
-            });
-            $("#module-export").css({
-              "left": "750px"
-            });
+            // $("#frame").css({
+            //   "left": "50%"
+            // });
+            // $("#module-export").css({
+            //   "left": "750px"
+            // });
           }
 
         updateJvenn(gprotein_ID)
