--- a/drugs/templates/drugged_gpcrome.html
+++ b/drugs/templates/drugged_gpcrome.html
@@ -31,57 +31,118 @@
       The GPCRome wheel plot shows the highest clinical phase drugs have reached for each receptor.<br>
       <br>
     </div>
-    <br>
-    <div class="col-md-3">
-      Receptor names:
-        <div class="btn-group" role="group" id="gtp_plus">
-            <button id="GPCRome_UniProtNames" class="btn btn-info ">Gene</button>
-            <button id="GPCRome_IUPHARNames" class="btn btn-info active">Protein</button>
+
+    <ul class="nav nav-tabs">
+        <li class="active">
+          <a href="#gpcrome" data-toggle="tab">Drugged GPCRome</a>
+        </li>
+        <li>
+          <a href="#tree" data-toggle="tab">Tree visualization</a>
+        </li>
+    </ul>
+
+    <!-- ## Tab content ## -->
+    <div class="tab-content">
+      <div id="gpcrome" class="tab-pane fade in active">
+        <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
+          <div class="col-md-12">
+            <br>
+            <div class="col-md-3">
+              Receptor names:
+              <div class="btn-group" role="group" id="gtp_plus">
+                  <button id="GPCRome_UniProtNames" class="btn btn-info ">Gene</button>
+                  <button id="GPCRome_IUPHARNames" class="btn btn-info active">Protein</button>
+              </div>
+            </div>
+
+            <div class="col-md-2" style="padding-top: 5px;">
+              Icon toggle:
+              <button id="ToggleIcon" class="btn btn-info active">On</button>
+            </div>
+
+            <div class="col-md-4">
+              <div class="text-center">
+                <div class="dropdown">
+                  <button type="button" class="btn btn-primary dropdown-toggle" style="font-size: 14px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-download" style="vertical-align: top;line-height: 1.3"></span> Download <span class="caret"></span>
+                  </button>
+                  <div class="dropdown-menu dropdown-menu-right-middle">
+                    <li><a class="dropdown-item" href="javascript:saveSvg(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.svg');">SVG</a></li>
+                    <li><a class="dropdown-item" href="javascript:saveSvgAsPng(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.png');">PNG</a></li>
+                    <li><a class="dropdown-item" href="javascript:saveSvgAsJpg(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.jpg');">JPG</a></li>
+                    <li><a class="dropdown-item" href="javascript:saveSvgAsTiff(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.tiff');">TIFF</a></li>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div style="float: left; position: relative" class="text-center">
+                <b>Clinical phase</b> <br/>
+                    <span class="color_phase1">&#9644; <b>Phase 1</b></span>
+                    <span class="color_phase2">&#9644; <b>Phase 2</b></span>
+                    <span class="color_phase3">&#9644; <b>Phase 3</b></span>
+                    <span class="color_phase4">&#9644; <b>Phase 4</b></span>
+              </div>
+            </div>
+          <br />
+          <br />
+          <br />
+
+          <div id="image-container" data-image-url="{% static 'home/images/DataMapper_GPCRome_icon_legend.png' %}"></div>
+          <!-- GPCRome -->
+          <div class="col-md-12" style="margin-top: 0px;margin-bottom: 30px;">
+              <div id="GPCRome_plot" class="text-center"></div>
+          </div>
+
+          </div>
         </div>
-    </div>
-
-    <div class="col-md-2" style="padding-top: 5px;">
-      Icon toggle:
-      <button id="ToggleIcon" class="btn btn-info active">On</button>
-    </div>
-
-    <div class="col-md-4">
-      <div class="text-center">
-        <div class="dropdown">
-          <button type="button" class="btn btn-primary dropdown-toggle" style="font-size: 14px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="glyphicon glyphicon-download" style="vertical-align: top;line-height: 1.3"></span> Download <span class="caret"></span>
-          </button>
-          <div class="dropdown-menu dropdown-menu-right-middle">
-            <li><a class="dropdown-item" href="javascript:saveSvg(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.svg');">SVG</a></li>
-            <li><a class="dropdown-item" href="javascript:saveSvgAsPng(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.png');">PNG</a></li>
-            <li><a class="dropdown-item" href="javascript:saveSvgAsJpg(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.jpg');">JPG</a></li>
-            <li><a class="dropdown-item" href="javascript:saveSvgAsTiff(document.getElementById('GPCRome_plot_svg'), 'GPCRome_plot.tiff');">TIFF</a></li>
+      </div>
+    <div id="tree" class="tab-pane fade">
+      <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
+        <div class="col-md-12">
+          <br>
+          <div class="col-md-3">
+            Receptor names:
+              <div class="btn-group" role="group" id="gtp_plus">
+                  <button id="TREE_UniProtNames" class="btn btn-info active">Gene</button>
+                  <button id="TREE_IUPHARNames" class="btn btn-info">Protein</button>
+              </div>
+          </div>
+          <div class="col-md-6">
+            <div class="text-center">
+              <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" style="font-size: 14px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="glyphicon glyphicon-download" style="vertical-align: top;line-height: 1.3"></span> Download <span class="caret"></span>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right-middle">
+                  <li><a class="dropdown-item" href="javascript:saveSvg(document.getElementById('tree_plot_svg'), 'Tree.svg');">SVG</a></li>
+                  <li><a class="dropdown-item" href="javascript:saveSvgAsPng(document.getElementById('tree_plot_svg'), 'Tree.png');">PNG</a></li>
+                  <li><a class="dropdown-item" href="javascript:saveSvgAsJpg(document.getElementById('tree_plot_svg'), 'Tree.jpg');">JPG</a></li>
+                  <li><a class="dropdown-item" href="javascript:saveSvgAsTiff(document.getElementById('tree_plot_svg'), 'Tree.tiff');">TIFF</a></li>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div style="float: left; position: relative" class="text-center">
+              <b>Clinical phase</b> <br/>
+                  <span class="color_phase1">&#9644; <b>Phase 1</b></span>
+                  <span class="color_phase2">&#9644; <b>Phase 2</b></span>
+                  <span class="color_phase3">&#9644; <b>Phase 3</b></span>
+                  <span class="color_phase4">&#9644; <b>Phase 4</b></span>
+            </div>
+          </div>
+          <!-- ############# -->
+          <!-- # TREE plot # -->
+          <!-- ############# -->
+          <div class="col-md-12" style="margin-top: 0px;margin-bottom: 30px;">
+              <div id="tree_plot" class="text-center"></div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
-      <div style="float: left; position: relative" class="text-center">
-        <b>Clinical phase</b> <br/>
-            <span class="color_phase1">&#9644; <b>Phase 1</b></span>
-            <span class="color_phase2">&#9644; <b>Phase 2</b></span>
-            <span class="color_phase3">&#9644; <b>Phase 3</b></span>
-            <span class="color_phase4">&#9644; <b>Phase 4</b></span>
-      </div>
-    </div>
-  <br />
-  <br />
-  <br />
-
-    <div id="image-container" data-image-url="{% static 'home/images/DataMapper_GPCRome_icon_legend.png' %}"></div>
-    <!-- GPCRome -->
-    <div class="col-md-12" style="margin-top: 0px;margin-bottom: 30px;">
-        <div id="GPCRome_plot" class="text-center"></div>
-    </div>
-
   </div>
 </div>
-
 {% endblock %}
 
 {% block addon_js %}
@@ -256,5 +317,67 @@ function updateFillData(fill_data, conversionDict, labelType) {
 
     return updatedData;
 }
+</script>
+<script type="text/javascript" charset="utf-8">
+
+  // Set dropdown to keep open
+  $('.dropdown-menu').on('click', function(event){
+      event.stopPropagation();
+    });
+
+    // # Initialize data #
+    tree_data = {{ tree | safe }};
+    console.log(tree_data);
+    tree_options = {{ tree_options | safe }};
+    Tree_circles = {{ circles|safe }};
+    Tree_label_dict = {{ whole_dict|safe }};
+
+    tree_data = update_tree_data(tree_data,tree_options.depth);
+    const depth = tree_options.depth;  // Set this value when the page loads
+
+    // Handler for one class -> reduce the depth
+    if (tree_options.depth == 4) {
+      maxLeafNodeLenght = 4*parseInt(tree_options.fontSize.receptor);
+    } else if (tree_options.depth == 3) {
+      maxLeafNodeLenght = 4*parseInt(tree_options.fontSize.receptorfamily);
+    }
+    circle_size = 4;
+    circle_spacer = circle_size*2+1;
+
+    var Tree_circle_styling_dict = {
+      "Inner":'One',
+      "Outer1":"Two",
+      "Outer2":"Two",
+      "Outer3":"Two",
+      "Outer4":"Two",
+      "Outer5":"Three",
+    }
+
+    Tree_colors = {"Outer1":["#FFFFFF","#f5bcbf"],
+                  "Outer2":["#FFFFFF","#f17270"],
+                  "Outer3":["#FFFFFF","#dd2628"],
+                  "Outer4":["#FFFFFF","#2c87c8"],
+                  "Outer5":["#FFFFFF","#FFA500"]};
+
+    // # Change leaves buttons #
+    $("#TREE_UniProtNames").click(function(){
+        $("#TREE_UniProtNames").addClass("active");
+        $("#TREE_IUPHARNames").removeClass("active");
+        changeLeavesLabels("tree_plot", "UniProt", Tree_label_dict);
+        DrawCircles('tree_plot', Tree_circles, maxLeafNodeLenght, Tree_colors, true, true, Tree_circle_styling_dict, circle_spacer, circle_size);
+    });
+    $("#TREE_IUPHARNames").click(function() {
+      $("#TREE_UniProtNames_bal").removeClass("active");
+      $("#TREE_IUPHARNames_bal").addClass("active");
+      changeLeavesLabels("tree_plot","IUPHAR", Tree_label_dict);
+      DrawCircles('tree_plot', Tree_circles, maxLeafNodeLenght, Tree_colors, true, true, Tree_circle_styling_dict, circle_spacer, circle_size);
+    });
+    // # Initialize tree plot #
+    document.addEventListener("DOMContentLoaded", function() {
+      draw_tree(tree_data, tree_options, circle_size);
+      DrawCircles('tree_plot', Tree_circles, maxLeafNodeLenght, Tree_colors, true, true, Tree_circle_styling_dict, circle_spacer, circle_size);
+    });
+
+
 </script>
 {% endblock %}
